--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vue-project</title>
   </head>
-  <body>
+  <body style="margin: 0px">
     <noscript>
       <strong>We're sorry but vue-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+	</body>
 </html>
